export const snapshot = {};

snapshot[`useOas standard behavior - OpenApi v3.0 > testApiDocSnapshot 1`] = `
{
  components: {
    parameters: {},
    schemas: {},
  },
  info: {
    description: "this is a mock API",
    title: "mock API",
    version: "0.1.0",
  },
  openapi: "3.0.3",
  paths: {
    "/hello/{name}": {
      post: {
        operationId: undefined,
        parameters: [
          {
            in: "path",
            name: "name",
            required: true,
            schema: {
              type: "string",
            },
          },
        ],
        responses: {},
        tags: undefined,
      },
    },
  },
  servers: [
    {
      url: "/mock/",
    },
  ],
  tags: [
    {
      description: "Example description for Example Section",
      externalDocs: {
        url: "http://localhost",
      },
      name: "Example Section",
    },
  ],
}
`;

snapshot[`useOas standard behavior - OpenApi v3.1 > testApiDocSnapshot 1`] = `
{
  components: {
    parameters: {},
    schemas: {},
  },
  info: {
    description: "this is a mock API",
    title: "mock API",
    version: "0.1.0",
  },
  openapi: "3.1.0",
  paths: {
    "/hello/{name}": {
      post: {
        operationId: "my-unique-test-op-id",
        parameters: [
          {
            in: "path",
            name: "name",
            required: true,
            schema: {
              type: "string",
            },
          },
        ],
        responses: {},
        tags: [
          "Example Section",
        ],
      },
    },
  },
  servers: [
    {
      url: "/mock/",
    },
  ],
  tags: [
    {
      description: "Example description for Example Section",
      externalDocs: {
        url: "http://localhost",
      },
      name: "Example Section",
    },
  ],
  webhooks: {},
}
`;
